--- a/College Grades/College_Grades_Generator/index.html
+++ b/College Grades/College_Grades_Generator/index.html
@@ -126,27 +126,27 @@
                 <form id="form-adiciona">
 					<div class="grupo">
 						<label for="ano">School Year:</label>
-						<input id="ano" name="ano" type="text" placeholder="Digite o Periodo Letivo" class="campo">
+						<input id="ano" name="ano" type="text" placeholder="Type The School Year" class="campo">
 					</div>
 					<div class="grupo">
 						<label for="codigo">Grade Code:</label>
-						<input id="codigo" name="codigo" type="text" placeholder="Digite o codigo da sua matéria" class="campo campo-medio">
+						<input id="codigo" name="codigo" type="text" placeholder="Type The Grade Code" class="campo campo-medio">
 					</div>
 					<div class="grupo">
 						<label for="disciplina">School Subject:</label>
-						<input id="disciplina" name="disciplina" type="text" placeholder="Digite o nome da disciplina" class="campo campo-medio">
+						<input id="disciplina" name="disciplina" type="text" placeholder="Type The School Subject" class="campo campo-medio">
 					</div>
 					<div class="grupo">
 						<label for="ch">Total Hours:</label>
-						<input id="ch" type="text" placeholder="Digite a CH" class="campo campo-medio">
+						<input id="ch" type="text" placeholder="Type The Total Hours" class="campo campo-medio">
 					</div>
                     <div class="grupo">
 						<label for="nota">Grades:</label>
-						<input id="nota" name="nota" type="text" placeholder="Digite a nota" class="campo campo-medio">
+						<input id="nota" name="nota" type="text" placeholder="Type The Grades" class="campo campo-medio">
 					</div>
                     <div class="grupo">
 						<label for="frequencia">Frequency:</label>
-						<input id="frequencia" name="frequencia" type="text" placeholder="Digite a frequência" class="campo campo-medio">
+						<input id="frequencia" name="frequencia" type="text" placeholder="Type The Frequency" class="campo campo-medio">
 					</div>
 
 					<button id="adicionar-materia" class="botao bto-principal">ADD DATA</button>
